import controllers.WindowController;

import javax.swing.*;

public class Main {

    public static void main(String[] args) {
        WindowController app=new WindowController();
        app.setDefaultCloseOperation(JFrame.EXIT_ON_CLOSE);
    }
}
